crates/chat/tests/snapshots/chrome__boot_surface_matches_pi_chrome_at_120x40.snap
---
source: crates/chat/tests/chrome.rs
expression: "rows.join(\"\\n\")"
---

╭─── omp v0.1.0 ───────────────────────────────────────────────────────────────────────────────────╮
│                          │ Tips                                                                  │
│      Welcome back!       │ # for prompt actions                                                  │
│                          │ / for commands                                                        │
│       ████████████       │ ! to run bash                                                         │
│          ██  ██          │ $ to run python                                                       │
│          ██  ██          │ ───────────────────────────────────────────────────────────────────── │
│          ▒▒  ██          │ LSP Servers                                                           │
│              ██          │ No LSP servers                                                        │
│                          │                                                                       │
│      Claude Fable 5      │                                                                       │
│        anthropic         │                                                                       │
│                          │ ───────────────────────────────────────────────────────────────────── │
│                          │ Recent sessions                                                       │
│                          │ No recent sessions                                                    │
│                          │                                                                       │
│                          │                                                                       │
│                          │                                                                       │
│                          │                                                                       │
╰──────────────────────────┴───────────────────────────────────────────────────────────────────────╯
 Tip: Press shift+tab to cycle through reasoning effort levels


 π  > ⬢ Fable 5 > 📁 omp > ⑂ main ▶─0%───────────────────────────────────────────────────────────────┃───────────────1M─
╰─ Ask anything, edit files, run tools
